# hoogle-bot

./: hoogleBot.cabal  stack.yaml
app/: Main.hs
src/: HoogleBot.hs  Lib.hs
