name:                hoogleBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wat-aro/hoogleBot#readme
license:             BSD3
license-file:        LICENSE
author:              wat-aro
maintainer:          kazutas1008@gmail.com
copyright:           wat-aro
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HoogleBot
  build-depends:       base >= 4.7 && < 5
                     , slack-api
                     , text
                     , process
  default-language:    Haskell2010

executable hoogleBot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hoogleBot
                     , slack-api
  default-language:    Haskell2010

test-suite hoogleBot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hoogleBot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hoogleBot
